<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/NUMERO1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ESCRIBE UN NUMERO"
            android:inputType="number" />

        <EditText
            android:id="@+id/NUMERO2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ESCRIBE UN NUMERO"
            android:inputType="number" />

        <TextView
            android:id="@+id/RESPUESTA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/BOTON_SUMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SUMA" />

                <Button
                    android:id="@+id/BOTON_RESTA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="RESTA" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/BOTON_MULTIPLICACION"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MULTIPLICACION" />

                <Button
                    android:id="@+id/BOTON_DIVISION"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DIVISION" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>